RoomMake.js : room create complete

--- a/.gitignore
+++ b/.gitignore
@@ -50,4 +50,4 @@ buildNumber.properties
 hs_err_pid*
 
 # properties
-src/main/resources/application.properties
+#src/main/resources/application.properties
