--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Embedded server configuration
-server.port=8088
+server.port=8089
 
 ## Encoding
 spring.servlet.encoding.force=true
@@ -32,7 +32,7 @@ training.mybatis.driver-class-name=org.mariadb.jdbc.Driver
 
 training.mybatis.url=jdbc:mariadb://localhost:3306/training
 training.mybatis.username=root
-training.mybatis.password=mariadb
+training.mybatis.password=mysql
 
 training.mybatis.min-idle=2
 training.mybatis.max-pool-size=2
