--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.11.0",
     "@mui/joy": "^5.0.0-alpha.64",
+    "@mui/lab": "^5.0.0-alpha.119",
     "@mui/material": "^5.11.4",
     "@mui/system": "^5.11.8",
     "@testing-library/jest-dom": "^5.11.4",
@@ -23,7 +24,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
